--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <h1>Sean Enderby</h1>
+<h2>I do audio research because it is fun.</h2>
 
 <img src="sean.png" alt="Stop That!" height="200"/> <br/><br/>
 
-Stuff: 
+Some stuff what I done: 
 
 <ul>
 	<li>
